# Void-Api-Uplay

./: Cargo.toml  build.rs  void_uplay_api.ini
dll_proxy/: Cargo.toml
dll_proxy/src/: lib.rs  lib_old.rs  macros.rs
dll_stub/: Cargo.toml
dll_stub/src/: lib.rs  lib_old.rs
src/: main.rs
