[package]
name = "uplay-emu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Add any dependencies needed for dll_proxy and dll_stub here
# For example, if they use `windows` crate:
# windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[build-dependencies]
anyhow = "1.0"
